--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -6,6 +6,9 @@ pipeline {
     tools {
         maven 'Maven'
     }
+    options {
+        skipDefaultCheckout(true)
+    }
 
     stages {
         stage('check env') {
