--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -3,6 +3,9 @@ pipeline {
     environment { 
         INSTAGRAM_NERIO = '@Nerio' 
     }
+    tools {
+        maven 'Maven'
+    }
     options {
         skipDefaultCheckout(true)
     }
