--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -36,6 +36,7 @@ pipeline {
         stage('Test') {
             steps {
                 configFileProvider([configFile(fileId: 'vehicle-maven-artifactory-settings', variable: 'MAVEN_SETTINGS')]) {
+                    sh 'cat $MAVEN_SETTINGS'
                     sh 'mvn -s $MAVEN_SETTINGS test --batch-mode'
                 }
             }
