--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -64,5 +64,12 @@ pipeline {
                 }
             }
         }
-    } 
-} 
+
+        stage ('Report Junit') {
+            steps {
+                step([$class: 'JUnitResultArchiver', testResults: '**/target/surefire-reports/TEST-*.xml', healthScaleFactor: 1.0])
+                    junit '**/target/surefire-reports/TEST-*.xml'
+            }
+        }
+    }
+}
