--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <repositories>
         <repository>
             <id>vehicle-libs-release</id>
+            <name>artifactory-vehicle-libs-release</name>
             <url>http://192.168.1.102:8082/artifactory/vehicle-libs-release/</url>
         </repository>
     </repositories>
