--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -81,15 +81,14 @@ pipeline {
         stage('Sonar-scanner Analysis') {
             steps{
                 script{
-                    def sonarqubeScannerHome = tool name: 'sonarqube-scanner', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
                     withSonarQubeEnv('sonarqube-10.6')
                     {
                         configFileProvider([configFile(fileId: 'vehicle-maven-artifactory-settings', variable: 'MAVEN_SETTINGS')]) {
                             sh "mvn -s $MAVEN_SETTINGS sonar:sonar -Pcoverage \
                             -Dsonar.host.url=${SONAR_HOST_URL} \
                             -Dsonar.login=${SONAR_AUTH_TOKEN} \
-                            -Dsonar.projectName=${JOB_BASE_NAME}:${CLUSTER} \
-                            -Dsonar.projectKey=${JOB_BASE_NAME}:${CLUSTER} \
+                            -Dsonar.projectName=${JOB_BASE_NAME} \
+                            -Dsonar.projectKey=${JOB_BASE_NAME} \
                             -Dsonar.sources=src/main/java \
                             -Dsonar.java.libraries=target/ \
                             -Dsonar.java.binaries=target/classes \
