--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
         </sonar.coverage.exclusions>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>coverage</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+
     <repositories>
         <repository>
             <id>vehicle-libs-release</id>
